correct path to odin logo image and correct body alignment

--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap");
 
-body {
+html * {
   font-family: "Quicksand", sans-serif;
+}
+
+body {
   max-width: 500px;
+  height: max-content;
   margin: auto;
 }
 
